@@ -2,24 +2,25 @@ Package: RLRsim
 Type: Package
 Title: Exact (Restricted) Likelihood Ratio Tests for Mixed and Additive
         Models
-Version: 3.1-2
-Date: 2015-09-08
+Version: 3.1-3
+Date: 2016-11-03
 Authors@R: c(person("Fabian", "Scheipl", role = c("aut", "cre"), email = "fabian.scheipl@stat.uni-muenchen.de"), person("Ben", "Bolker", role = "aut"))
 Maintainer: Fabian Scheipl <fabian.scheipl@stat.uni-muenchen.de>
 Description: Rapid, simulation-based exact (restricted) likelihood ratio tests
     for testing the presence of variance components/nonparametric terms for
-    models fit with nlme::lme(),lme4::lmer(), gamm4::gamm4(), mgcv::gamm() and
-    SemiPar::spm().
+    models fit with nlme::lme(),lme4::lmer(), lmeTest::lmer(), gamm4::gamm4(),
+    mgcv::gamm() and SemiPar::spm().
 License: GPL
 URL: https://github.com/fabian-s/RLRsim
 BugReports: https://github.com/fabian-s/RLRsim/issues
 Depends: R (>= 2.14.0)
 Imports: Rcpp (>= 0.11.1), lme4 (>= 1.1), mgcv, nlme
 LinkingTo: Rcpp
-Enhances: SemiPar
+Enhances: SemiPar, lmerTest
+RoxygenNote: 5.0.1
 NeedsCompilation: yes
-Packaged: 2015-09-10 15:42:53 UTC; fabians
+Packaged: 2016-11-04 12:43:10 UTC; fabians
 Author: Fabian Scheipl [aut, cre],
   Ben Bolker [aut]
 Repository: CRAN
-Date/Publication: 2015-09-11 07:13:32
+Date/Publication: 2016-11-04 23:33:58
