@@ -1,19 +1,19 @@
-722914dbc7fcd90b46bd10e269d75de4 *DESCRIPTION
-8c8caa8f0af6ebebe022587a6ea3a545 *NAMESPACE
-2cbf78a827f22458d063c8577eac84ed *NEWS
+a58592abbc7c76fc17a2c08c78466088 *DESCRIPTION
+8df01da48a556f2f72ffb5edda94fdb8 *NAMESPACE
+8c173ef3ec82166d879e646bf7611ee1 *NEWS
 9d6f9230837e8b39c276ffd72630a5fc *R/LRTSim.R
-40a0ec4829c36bb815a4aecd28365b02 *R/RLRTSim.R
+c9812f9d5a457246aa3cf63d457ee624 *R/RLRTSim.R
 0180fce884de17ffc5b18bf8d02fc96a *R/RLRsim-package.R
-84649dc63b4e408bc26f9528fa98506c *R/RcppExports.R
-4ac290b51a83abf05510dba8b19dc410 *R/exactLRT.R
-630e54d5c1c7d53536356fdc644a737c *R/exactRLRT.R
+d4e9d907114069e26e65fc9b7c62d20c *R/RcppExports.R
+63ab6786ab123d07bcd084ae769e1b2a *R/exactLRT.R
+6c66e21fc66644dd1a9d5b9dcb836cb7 *R/exactRLRT.R
 04604eccab97876b89abbb70ee9eb8ad *R/extract.lmeDesign.R
-7426a3ddf59b4211af3ae99c42c1bb60 *R/extract.lmerModDesign.R
+d8687f4928b4251874e98496216f11a6 *R/extract.lmerModDesign.R
 41c04c7526ce81f92356558d6fbc6218 *inst/CITATION
-3fef71f986c83ba8894383e91e15dd15 *man/LRTSim.Rd
-1616604f40ac8fbb3cbc7d5a98d0577c *man/RLRsim-package.Rd
-611d9babbfc13b44cd4f5a996a66f813 *man/exactLRT.Rd
-36bfdb343153b10d6b80e9448f345791 *man/exactRLRT.Rd
-c338bee52e2eac4060b2f2bdd75bc751 *man/extract.lmeDesign.Rd
+79d0c7bf592f58314039bd569ad986a2 *man/LRTSim.Rd
+3c8ca0a6cf562e51ea17323c883ece40 *man/RLRsim-package.Rd
+41c6819d5ed755100da6b382ed8dbd8d *man/exactLRT.Rd
+a9d14104f94b9b088ec792d8003c02c2 *man/exactRLRT.Rd
+778e2669646b62a67bca77683e4c71c4 *man/extract.lmeDesign.Rd
 0d863081f160c630e7b5afb615e46f0b *src/RLRsim.cpp
-a7ef6d0dcb22d1320f264b9c0935f068 *src/RcppExports.cpp
+529d8f5566d4dd780713cc4db6b50983 *src/RcppExports.cpp
