@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/LRTSim.R
 \name{LRTSim}
 \alias{LRTSim}
@@ -72,6 +72,7 @@ scale. \code{gridlength} is the number of points on the grid.\ These are just
 wrapper functions for the underlying C code.
 }
 \examples{
+
 library(lme4)
 g <- rep(1:10, e = 10)
 x <- rnorm(100)
@@ -84,6 +85,7 @@ X <- getME(m,"X")
 Z <- t(as.matrix(getME(m,"Zt")))
 sim.LRT <- LRTSim(X, Z, 1, diag(10))
 (pval <- mean(sim.LRT > obs.LRT))
+
 }
 \author{
 Fabian Scheipl; parallelization code adapted from \code{boot} package
