@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/exactLRT.R
 \name{exactLRT}
 \alias{exactLRT}
@@ -71,6 +71,7 @@ Var(b)>0}\deqn{\mbox{or}\;\beta_{p}\neq
 likelihood ratio test statistic as derived by Crainiceanu & Ruppert (2004).
 }
 \examples{
+
 library(nlme);
 data(Orthodont);
 
@@ -81,6 +82,7 @@ m0<-lm(distance ~ Sex + I(age - 11), data = Orthodont)
 summary(mA)
 summary(m0)
 exactLRT(m = mA, m0 = m0)
+
 }
 \author{
 Fabian Scheipl, updates for \pkg{lme4.0}-compatibility by Ben Bolker
