@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/exactRLRT.R
 \name{exactRLRT}
 \alias{exactRLRT}
@@ -79,9 +79,10 @@ very small. We use the finite sample distribution of the restricted
 likelihood ratio test statistic as derived by Crainiceanu & Ruppert (2004).
 }
 \examples{
+
 library(lme4)
 data(sleepstudy)
-mA <- lmer(Reaction ~ I(Days-4.5) + (1|Subject) + (0 + I(Days-4.5)|Subject),
+mA <- lmer(Reaction ~ I(Days-4.5) + (1|Subject) + (0 + I(Days-4.5)|Subject), 
   data = sleepstudy)
 m0 <- update(mA, . ~ . - (0 + I(Days-4.5)|Subject))
 m.slope  <- update(mA, . ~ . - (1|Subject))
@@ -91,13 +92,14 @@ exactRLRT(m.slope, mA, m0)
 library(mgcv)
 data(trees)
 #test quadratic trend vs. smooth alternative
-m.q<-gamm(I(log(Volume)) ~ Height + s(Girth, m = 3), data = trees,
+m.q<-gamm(I(log(Volume)) ~ Height + s(Girth, m = 3), data = trees, 
   method = "REML")$lme
 exactRLRT(m.q)
 #test linear trend vs. smooth alternative
-m.l<-gamm(I(log(Volume)) ~ Height + s(Girth, m = 2), data = trees,
+m.l<-gamm(I(log(Volume)) ~ Height + s(Girth, m = 2), data = trees, 
   method = "REML")$lme
 exactRLRT(m.l)
+
 }
 \author{
 Fabian Scheipl, bug fixes by Andrzej Galecki, updates for
